1px jump fix when toggling the filter

--- a/css/filtrify.css
+++ b/css/filtrify.css
@@ -46,11 +46,13 @@ ul.ft-menu > li.ft-field > span.ft-label:before {
     margin-right: 15px; 
 }
 ul.ft-menu > li.ft-field > span.ft-label:after { 
-    font-size: 80%; content: " \25bc"; 
+    font-size: 80%; 
+    content: " \25bc"; 
 }
 ul.ft-menu > li.ft-field > span.ft-label.ft-active:before { 
     content: "T"; 
     color: #2D3743; 
+    margin-right: 14px; 
 }
 ul.ft-menu > li.ft-field > span.ft-label.ft-opened:after { 
     content: " \25b2"; 
